# CPP-and-C

./: Readme.md  Sales_item.h  Sales_item.txt  app2.cpp  example2.txt  example2_redirect.txt  example3.cpp  example3.txt  example4..cpp  example4.txt  output
ArraysStrings/: examp2.cpp
BouncyBalls/: BouncyBall.cpp  BouncyBall.h  Makefile  ball.cpp  examp.cpp  main.cpp
DataStructures/: First Program.c  First Program.cpp  L_listAtEnd.cpp  L_listCountList.cpp  L_listDeleteAllOccurences.cpp  LinkedListAtFront.cpp  Malloc Realloc.cpp  Stack.cpp  binarytree.cpp  llistdel.cpp  qcheck.cpp  rod.cpp  wgame.cpp
FileStreams/: file.txt  ofstream.cpp  output
General/: Input_Output.cpp  Sales_item.cpp  alarm.cpp  clock.cpp  examp5.cpp  example2.cpp  example4.cpp  output
GenericsAndConcepts/: GenericConstraints.cpp
InterwQusetions/: output  q10.cpp  q11.cpp  q12.cpp  q14.cpp  q2.cpp  q3.cpp  q6.cpp  q7.cpp  q8.cpp
Math Solutions/: main.cpp  output
MatrixIsHere/: matrix.cpp
OOP/: areacalc.cpp  examp  examp.cpp  power  power.cpp  wgame.cpp
Pointers/: example5.cpp  example6.txt  example7.cpp  strevptr.cpp  strlen.cpp  validemail.cpp
PongGame/: Makefile  main  main.cpp  output
STL/: CMakeLists.txt  Makefile  output
SnakeGame/: Makefile  Readme.md  config.cpp  config.h  main.cpp  output
SortingAlgorithms/: quicksort.cpp
Sounds/: smario.cpp
Structures/: enum  struct  struct.cpp  typedef  typedef.cpp  union.cpp
Vectors/: example1.cpp  example3.cpp  example4.cpp  output
examp/: examp1  examp1.cpp
unit-tests/app1/: CMakeLists.txt  Makefile  main.cpp
(+178 files in other folders)
